--- a/Project.tex
+++ b/Project.tex
@@ -9,4 +9,13 @@
 \newpage
 \tableofcontents
 \newpage
+\section{Wat is Wine?}
+Wine is een opensourceprogramma om software die voor Windows gemaakt is, ook te gebruiken op andere besturingssystemen. Dit wordt vaak gebruikt voor Mac of Linux. Wine implementeert zowel 16- als 32 bit Windowsprogramma's, maar kan Windows zelf niet uitvoeren.
+\subsection{De naam 'Wine'}
+De originele betekenis van 'Wine' was de acroniem voor '\textbf{WIN}dows \textbf{E}mulator. \\
+Deze betekenis is later echter veranderd omdat men dit programma wou onderscheiden van andere 'echte' emulators. Nu betekent 'Wine' niets anders dan \textit{Wine Is Not An Emulator}.
+Een emulator maakt het mogelijk om een ander of verouderd computersysteem in een eigen omgeving na te bootsen. Denk maar aan VirtualBox of VMWare.
+
+Dit is echter voor discussie vatbaar, omdat een emulatie in ruimere zin 'het simuleren van een omgeving bovenop de huidige omgeving' kan betekenen. In dit geval is Wine dus wel een emulator en was de vorige betekenis van de naam eigenlijk beter gekozen.
+\newpage
 \end{document}
