--- a/Project.tex
+++ b/Project.tex
@@ -49,5 +49,24 @@ Third-party software zijn programma's die niet gemaakt zijn door Wine en ook nie
 	\item Wineskin
 \end{itemize}
 \newpage
+\section{Installatie van Wine}
+Om Wine te installeren in Ubuntu, moeten we in het Software center op zoek gaan naar het Wine programma. Dit doen we door in het zoekveld 'Wine' in te tikken. Als zoekresultaat zullen er meerdere Wine programma's gevonden worden, maar we kiezen 'Wine Windows program loader (wine 1.3)'.
+\begin{figure} [!ht]
+\begin{center}
+	\includegraphics[scale=0.5]{Installeren}
+\end{center}
+	\caption{zoeken van het Wine programma in het Software center}
+\end{figure}
 
+Als we dit aanklikken en we klikken op Install, moet het paswoord van de computer ingegeven worden, en daarna begint Wine automatisch met downloaden.
+\newpage
+Na het downloaden wordt automatisch een wizard geopend. We vinken aan dat we akkoord gaan met de voorwaarden en drukken op OK. De installatie gaat verder en na enkele ogenblikken is Wine geïnstalleerd.
+
+Als we nu in het zoekveld van de 'Dash home' Wine ingeven, komt het programma daar te staan en kunnen we aan de slag.
+\begin{figure} [!ht]
+\begin{center}
+	\includegraphics[scale=0.5]{Zoeken}
+\end{center}
+	\caption{Wine is correct ge\"{\i}nstalleerd en klaar voor gebruik}
+\end{figure}
 \end{document}
